--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -1,9 +1,9 @@
 * {
   border: none;
   border-radius: 0px;
-  /*font-family: "JetBrainsMono Nerd Font";*/
+  font-family: "JetBrainsMono Nerd Font";
 
-  font-family: "Montserrat", sans-serif;
+  /*font-family: "Montserrat", sans-serif;*/
   font-weight: 500;
   font-style: normal;
   /* font-weight: medium; */
