--- a/.config/wofi/style/style-dark.css
+++ b/.config/wofi/style/style-dark.css
@@ -1,81 +1,80 @@
 * {
-    transition:0.2s;
+  transition: 0.2s;
 }
 
 window {
-    font-family: "FiraCode Nerd Font Mono";
-    margin: 0px;
-    border: 5px solid #1e1e2e;
-    background-color:transparent;
-    border-radius: 15px;
+  font-family: "Onest", sans-serif;
+  margin: 0px;
+  border: 5px solid #1e1e2e;
+  background-color: transparent;
+  border-radius: 15px;
 }
 
 #input {
-    padding: 4px;
-    margin: 4px;
-    padding-left: 20px;
-    border: none;
-    color: #000;
-    font-weight: bold;
-   /* background-color: #1e1e2e;*/
-    background: linear-gradient(90deg, #cba6f7 0%, #94e2d5 100%);
-    outline: none;
-    border-radius: 16px;
-    margin: 10px;
-    margin-bottom: 2px;
+  padding: 4px;
+  margin: 4px;
+  padding-left: 20px;
+  border: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #74259a;
+  outline: none;
+  border-radius: 9.3px;
+  margin: 10px;
+  margin-bottom: 2px;
 }
 #input:focus {
-    border: 0px solid #1e1e2e;
-    margin-bottom: 0px;
+  border: 1px solid #f274f9;
+  margin-bottom: 0px;
 }
 
 #inner-box {
-    margin: 4px;
-    border: 10px solid #1e1e2e;
-    color: #cdd6f4;
-    font-weight: bold;
-    background-color: #1e1e2e;
-    border-radius: 15px;
+  margin: 4px;
+  padding: 8px;
+  color: #cdd6f4;
+  font-weight: bold;
+  background-color: #30073c;
+  border-radius: 9.3px;
 }
 
 #outer-box {
-    margin: 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: #1e1e2e;
+  margin: 0px;
+  border-radius: 15px;
+  background-color: #050004;
+  border: 1px solid #f274f9;
 }
 
 #scroll {
-    margin-top: 5px;
-    border: none;
-    border-radius: 15px;
-    margin-bottom: 5px;
-    /* background: rgb(255,255,255); */
+  margin-top: 5px;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  /* background: rgb(255, 255, 255); */
 }
 
 #img:selected {
-    background-color: #89b4fa;
-    border-radius: 15px;
+  background-color: #8615ab;
+  border-radius: 15px;
 }
 
 #text:selected {
-    color: #cdd6f4;
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: #89b4fa;
+  color: #cdd6f4;
+  margin: 0px 0px;
+  border: none;
+  border-radius: 15px;
+  background-color: #8615ab;
 }
 
 #entry {
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: transparent;
+  margin: 0px 0px;
+  border: none;
+  border-radius: 8px;
+  background-color: transparent;
 }
 
 #entry:selected {
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: #89b4fa;
+  margin: 0px 0px;
+  border: none;
+  border-radius: 8px;
+  background-color: #8615ab;
 }
