--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -32,16 +32,18 @@ tooltip label {
 #workspaces {
   padding-right: 0px;
   padding-left: 5px;
+  background-color: #3b15ab;
+  border-radius: 500px;
 }
 
 #workspaces button {
   padding: 5px;
-  color: #313244;
+  color: #a6adc8;
   margin-right: 5px;
 }
 
 #workspaces button.active {
-  color: #a6adc8;
+  color: #fff;
 }
 
 #workspaces button.focused {
@@ -57,9 +59,9 @@ tooltip label {
 }
 
 #workspaces button:hover {
-  background: #11111b;
-  color: #cdd6f4;
-  border-radius: 10px;
+  background: #9480d1;
+  color: #3b3353;
+  border: none;
 }
 
 #custom-launch_wofi,
@@ -116,7 +118,7 @@ tooltip label {
   padding: 0px 10px;
   font-size: 12px;
   border-radius: 500px;
-  background: #1769aa;
+  background-color: #8615ab;
   color: #fff;
   margin: 5px;
 }
