feat: change default wallpaper

--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -14,6 +14,7 @@ window#waybar {
   border: 1px solid #f274f9;
   border-radius: 10px;
   background-color: #2b0636;
+  margin-bottom: 10px;
 }
 
 tooltip {
