--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -94,8 +94,8 @@ tooltip label {
 
 #tray,
 #temperature,
-#custom-updates,
 #clock,
+#custom-hyprsunset,
 #cpu {
   border-radius: 10px 0px 0px 10px;
 }
@@ -104,7 +104,7 @@ tooltip label {
 #custom-power_btn,
 #pulseaudio.microphone,
 #battery,
-#disk {
+#custom-updates {
   border-radius: 0px 10px 10px 0px;
   margin-right: 10px;
 }
