--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -1,3 +1,4 @@
+@import "/home/missic/.cache/wal/colors-waybar.css";
 * {
   border: none;
   border-radius: 0px;
@@ -45,8 +46,10 @@ tooltip label {
 }
 
 #workspaces button.active {
-  color: #fff;
-  background-color: #914595;
+  /* color: #fff; */
+  /* background-color: #914595; */
+  background-color: @color1;
+  color: @foreground;
 }
 
 #workspaces button.focused {
